tests/Semantic/test_2_r09.out
Error type 9 at Line 12: invalid argument number for compare, expect 2, got 3
