tests/Semantic/test_2_r09.spl
int compare(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
int test_2_r09()
{
  float a = 5.8;
  float b = 9.2;
  float c = 7.0;
  return compare(a, b, c);
}
